# galcon-hackathon

./: .gitignore  README.md  pyproject.toml
src/game_app/: 0_policy_net.pt  0_target_net.pt  1_policy_net.pt  1_target_net.pt  draw_game.py  main.py  policy_net.pt  pyproject.toml  pytest.ini  requirements.txt  target_net.pt  test.py  train.py
src/game_app/bots/: abstract_bot.py  dales_bot.py  defensive_and_optimal_expansion.py  fast_expand.py  full_aggression_bot.py  optimal_expansion.py  optimal_expansion_bot.py  random_bot.py  split_closest_friend_and_other.py  utils.py
src/game_app/bots/dqn_ai/: dqn_bot.py  util.py
src/game_app/game/: coordinates.py  fleet.py  galaxy.py  game.py  order.py  planet.py  player.py  team.py  utils.py
src/game_app/game_draw/: browser_display.html  draw_game.py  run_server.py  utils.py
src/game_app/game_recordings/: ExampleGame.json
src/game_app/map_generation/: abstract_map_generator.py  even_distribution_map_generator.py  polar_coordinates.py  spoke_map_generator.py  utils.py
src/game_app/tests/bots/: optimal_expansion.py  random_bot.py  utils.py
src/game_app/tests/game/: coordinates.py  fleet.py  game.py  order.py  player.py  team.py  test_game.py  test_planet.py  test_utils.py
src/game_app/tests/game_draw/: browser_display.html
src/game_app/tests/map_generation/: even_distribution_map_generator.py  spoke_map_generator.py
