[tool.poetry]
name = "game-app"
version = "0.1.0"
description = ""
authors = ["Rupert Barton <rbarton@scottlogic.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
torch = [{version = "^2.3.0+cu121", source = "pytorch-gpu"}]
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.0+cu121", source = "pytorch-gpu"}
planet = "^2.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
